<resources>
    <string name="app_name">Curso Android 01</string>
    <string name="Usuario">Usuario:</string>
    <string name="Contraseña">Contraseña:</string>
    <string name="Acceder">Acceder</string>
    <string name="mensajeActivity2">Main Activity 2</string>
    <string name="registro">Registro</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellido</string>
    <string name="direccion">Dirección</string>
    <string name="email">E-mail</string>
</resources>
